--- a/0x02-i18n/translations/en/LC_MESSAGES/messages.po
+++ b/0x02-i18n/translations/en/LC_MESSAGES/messages.po
@@ -18,3 +18,10 @@ msgstr "Welcome to Holberton"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.15.0\n"
 
+#: 3-app.py:32
+msgid "home_title"
+msgstr "Welcome to Holberton"
+
+#: 3-app.py:33
+msgid "home_header"
+msgstr "Hello world!"
